Fri Apr 16 20:11:12 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_visitor_tmpl_module_inst.cpp(visit_constant):
        
          This method uses the reifying visitor to fetch the AST
          node created from the template argument. Since for constants,
          this node was created from a parsed literal, the expression
          type will be the largest possible (64-bit integer for
          example) and not necessarily the type of the corresponding
          template parameter. It's not necessary to match the types
          of parameter and argument at arg creation time. When the
          template module is instantiated, we use (for constants)
          the expression type of the constant AST node being visited.
          A new expression and AST node are created, and the type
          of the template arg node will be coerced to the type
          desired at that point, and any possible mismatches will
          be detected. Formerly we were using the type of the
          template arg, if one is found, which led to incorrect
          const types in code generation.

Thu Apr 15 18:59:01 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_type.cpp:
        
          Changed boolean flag to be used with 'true' and 'false' instead
          of 1 and 0.

Wed Apr 14 19:04:12 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be/be_visitor_component_scope.cpp:
        
          Cosmetic changes and corrections to comments.
          
        * TAO_IDL/be/util/utl_global.cpp(create_uses_multiple_stuff):
        
          When creating the AST node for the xxxConnection struct,
          specifically the 'objref' field, changed the argument from
          the result of calling uses_type() on the receptacle node
          to the result of calling lookup_by_name() on its scoped