@@ -1,3 +1,9 @@
+Mon Apr 19 07:47:12 UTC 2010  Martin Corino <mcorino@remedy.nl>
+
+	* tests/CSD_Strategy_Tests/TP_Test_Static/run_test.pl:
+
+	  Fixed missing library path customization for client processes.
+
 Fri Apr 16 20:11:12 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/ast/ast_visitor_tmpl_module_inst.cpp(visit_constant):
